--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ApiNote">
         <activity
-            android:name=".ApinoteActivity"
+            android:name=".ApiNoteListActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.ApiNote.NoActionBar">
             <intent-filter>
@@ -18,6 +18,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ApinoteActivity"
+            android:label="@string/title_note_activity"
+            android:theme="@style/Theme.ApiNote.NoActionBar">
         </activity>
     </application>
 
